[project]
name = "vidtoolz-apply-greenscreen"
version = "0.0.2"
description = "Apply greenscreen video on top of a video"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-apply-greenscreen"
Changelog = "https://github.com/sukhbinder/vidtoolz-apply-greenscreen/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-apply-greenscreen/issues"
CI = "https://github.com/sukhbinder/vidtoolz-apply-greenscreen/actions"

[project.entry-points."vidtoolz_plugins"]
greenscreen = "vidtoolz_apply_greenscreen:greenscreen_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
